-----------
v5.0.24-git
-----------

[mms] SECURITY: Fix obscure XSS issue if uploading a file in dynamic view from
      the browser's local filesystem that has a filename that contains HTML.
[mms] Catch failure to add attachments in dynamic view because PHP's maximum
      allowed POST size was exceeded.
[jan] Fix search link from portal if using dynamic view (Bug #11314).
[mms] Fix regression in using Virtual Trash (Bug #11478;
      tonyb@go-concepts.com).
[mms] Fix sending MDN notifications in traditional view (Bug #11311).
[mms] Fix changing sort order in dynamic search mailboxes (Bug #11108).
[mms] Fix regression in creating top-level mailbox in traditional view (Bug
      #11326).
[mms] Fix spam reporting in minimal view.


-------
v5.0.23
-------

[mjr] Only ask for the count of matching contacts when determining to use
      browser vs ajax autocompletion.
[jan] Fix closing the compose window after redirecting (Bug #11259).
[jan] Display correct values in permission-denied error messages (Bug #11253).


-------
v5.0.22
-------

[mms] SECURITY: Only allow display of basic image types directly in browser.
[jan] Update Turkish translation (İstanbul Technical University).
[jan] Re-add option to report messages as spam/ham through redirection.
[jan] Update Swedish translation (Jakob Alvermark
      <jakob.alvermark@bsdlabs.com>).


-------
v5.0.21
-------

[mms] SECURITY: Fix XSS vulnerabilities on the dynamic compose page and the
      minimal mailbox and message pages.
[jan] Re-add leading paragraph before HTML signatures to avoid writing into
      the signature.
[jan] Use preferred editor if not opening compose window from dynamic view.
[jan] Update Italian translation (Emilien <emilien@wifi.e4a.it>).
[mms] Save Bcc addresses when saving compose message as draft.
[mms] Fix handling of RETURN keypress in the Subject input on the dynamic
      compose page.
[jan] Fix regression in sending PGP encrypted messages (Bug #11150).